# opencv-tutorial-project

cpp-tutorial/mat/: .gitignore  CMakeLists.txt  mat.cpp
cpp-tutorial/video/: .gitignore  CMakeLists.txt  video.cpp
